--- a/index.html
+++ b/index.html
@@ -5,34 +5,39 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
   
   <title>Frontend Mentor | Coding Bootcamp Testimonials Slider</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
+  <div id="main-container">
+    <div id="slider-image" class="container">      
+        <img id="hero-img" src="./images/image-tanya.jpg" alt="Tanya">
+        <div id="slider">    
+        <button id="prev">
+          <svg xmlns="http://www.w3.org/2000/svg" width="12" height="18"><path fill="none" stroke="#8585AC" stroke-width="4" d="M11 1L3 9l8 8"/></svg>
+        </button>
+        <button id="next">
+          <svg xmlns="http://www.w3.org/2000/svg" width="13" height="18"><path fill="none" stroke="#8585AC" stroke-width="4" d="M2 1l8 8-8 8"/></svg>
+        </button>
+      </div>
+    </div>
+    <section id="testimonial" class="container">
+      <article id="testimonial-container">
+        <blockquote id="text">“ I’ve been interested in coding for a while but never taken the jump, until now. 
+          I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
+          excited about the future. ”
+        </blockquote>
+        <div id="person">
+          <span id="name">Tanya Sinclair</span>
+          <span id="job">UX Engineer</span>
+        </div>  
+      </article>
+    </section>
 
-  “ I’ve been interested in coding for a while but never taken the jump, until now. 
-  I couldn’t recommend this course enough. I’m now in the job of my dreams and so 
-  excited about the future. ”
-
-  Tanya Sinclair
-  UX Engineer
-
-  “ If you want to lay the best foundation possible I’d recommend taking this course. 
-  The depth the instructors go into is incredible. I now feel so confident about 
-  starting up as a professional developer. ”
-
-  John Tarkpor
-  Junior Front-end Developer
-  
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
-  </div>
+  </div>  
+  <script src="./script.js"></script>
 </body>
 </html>
+
