--- a/index.html
+++ b/index.html
@@ -36,7 +36,11 @@
       </article>
     </section>
 
-  </div>  
+  </div> 
+  <div class="attribution">
+    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
+    Coded by <a href="https://github.com/llennairek">Baf</a>.
+  </div> 
   <script src="./script.js"></script>
 </body>
 </html>
